--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,11 @@ a.small {
   margin: 0;
   padding: 10px 10px 0 10px;
   border-bottom: 1px dotted black;
+  opacity: .9;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .artistlist a {
@@ -259,6 +264,11 @@ a.small {
 
 .artistlist li:hover {
   background: #FDF6E3;
+  opacity: 1;
+  -webkit-transition: scale(1.2);
+  -moz-transition: scale(1.2);
+  -o-transition: scale(1.2);
+  transition: scale(1.2);
 }
 
 .artist img {
