--- a/partials/details.html
+++ b/partials/details.html
@@ -1,5 +1,7 @@
 <section class="artistinfo">
   <div class="artist cf" ng-model="artists">
+  <a href="#/details/{{prevArtist}}" class="btn btn-left">&lt;</a>
+  <a href="#/details/{{nextArtist}}" class="btn btn-left">&gt;</a>
     
     <h1>{{ artists[whichArtist].name }}</h1>
     <div class="info">
